fixed minor spacing

--- a/public/styles.css
+++ b/public/styles.css
@@ -18,7 +18,7 @@ li {
 
 h1 {
   font-size: 3.125rem;
-  margin-top: 20%;
+  margin-top: 2em;
 }
 
 h2 {
